--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>dev.tuxjsql</groupId>
     <artifactId>sqlite</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>TuxJSQL (Core)</name>
+    <name>TuxJSQL (SQLITE)</name>
     <licenses>
         <license>
             <name>GNU General Public License v3.0</name>
