--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pmarsceill/just-the-docs
-title: TuxJSQL
+title: TuxJSQL-SQLITE
 description: Tuxjsql SQLITE documentation
 url: "https://tuxjsql.dev"
 baseurl: "/sqlite/"
