--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.tuxjsql</groupId>
     <artifactId>sqlite</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0RC0</version>
     <name>TuxJSQL (SQLITE)</name>
     <licenses>
         <license>
