--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.tuxjsql</groupId>
     <artifactId>sqlite</artifactId>
-    <version>2.0.RC0</version>
+    <version>2.0.RC1-SNAPSHOT</version>
     <name>TuxJSQL (SQLITE)</name>
     <licenses>
         <license>
@@ -84,13 +84,18 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>dev.tuxjsql</groupId>
             <artifactId>tuxjsql</artifactId>
-            <version>2.0.RC0</version>
+            <version>2.0.RC1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
