--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.tuxjsql</groupId>
     <artifactId>sqlite</artifactId>
-    <version>2.0.RC1-SNAPSHOT</version>
+    <version>2.0.RC1</version>
     <name>TuxJSQL (SQLITE)</name>
     <licenses>
         <license>
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>dev.tuxjsql</groupId>
             <artifactId>tuxjsql</artifactId>
-            <version>2.0.RC1-SNAPSHOT</version>
+            <version>2.0.RC1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
