--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>dev.tuxjsql</groupId>
             <artifactId>tuxjsql</artifactId>
-            <version>2.0.RC1</version>
+            <version>2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
