--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.tuxjsql</groupId>
+    <groupId>me.kingtux.tuxjsql</groupId>
     <artifactId>sqlite</artifactId>
-    <version>2.1</version>
+    <version>2.2.0-SNAPSHOT</version>
     <name>TuxJSQL (SQLITE)</name>
     <licenses>
         <license>
@@ -27,14 +27,15 @@
     </developers>
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>kingtux-repo</id>
+            <url>https://repo.kingtux.me/storages/maven/tuxjsql</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>kingtux-repo</id>
+            <url>https://repo.kingtux.me/storages/maven/tuxjsql</url>
         </repository>
     </distributionManagement>
+
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
@@ -74,28 +75,23 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>kingtux-repo</id>
+            <url>https://repo.kingtux.me/storages/maven/tuxjsql</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
-            <groupId>dev.tuxjsql</groupId>
+            <groupId>me.kingtux</groupId>
             <artifactId>tuxjsql</artifactId>
-            <version>2.1</version>
+            <version>2.2.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
